--- a/Protocols/TLSSSL.html
+++ b/Protocols/TLSSSL.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" type="text/css" href="myStyle.css">
+    <link rel="stylesheet" type="text/css" href="../Misc/myStyle.css">
 </head>
 
 <body>
